--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
         "@types/node": "^18.7.18",
         "@types/node-fetch": "^2.6.2",
         "typescript": "^4.8.3"
-    }
+    },
+      "resolutions": {
+    "discord-api-types": "0.37.35"
+  }
 }
