--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "lint:fix": "eslint src/**/**.ts --fix",
         "format": "prettier --check .",
         "format:fix": "prettier --write .",
-        "generate-docs": "jsdoc -c ./.jsdoc.conf.json"
+        "generate-docs": "jsdoc -c ./.jsdoc.conf.json",
+        "build": "yarn build"
     },
     "repository": {
         "type": "git",
@@ -51,7 +52,7 @@
         "@types/node-fetch": "^2.6.2",
         "typescript": "^4.8.3"
     },
-      "resolutions": {
-    "discord-api-types": "0.37.35"
-  }
+    "resolutions": {
+        "discord-api-types": "0.37.35"
+    }
 }
