--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "@airdot/linked-roles",
     "version": "0.2.5",
     "description": "A powerful package to create & update linked roles for applications",
-    "main": "./dist/index.js",
-    "types": "./dist/index.d.ts",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "dependencies": {
         "@discordjs/rest": "^1.5.0",
         "cookie-parser": "^1.4.6",
@@ -20,7 +20,8 @@
         "format:fix": "prettier --write .",
         "generate-docs": "jsdoc -c ./.jsdoc.conf.json",
         "build": "tsc",
-        "prepublish": "yarn build"
+        "prepublish": "yarn build",
+        "install": "yarn build"
     },
     "repository": {
         "type": "git",
