--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "discord-api-types": "^0.37.24",
         "express": "^4.18.2",
         "mongoose": "^6.8.1",
-        "node-fetch": "^2.6.7"
+        "node-fetch": "^2.6.7",
+        "typescript": "^4.8.3"
     },
     "scripts": {
         "lint": "eslint src/**/**.ts",
@@ -19,9 +20,8 @@
         "format": "prettier --check .",
         "format:fix": "prettier --write .",
         "generate-docs": "jsdoc -c ./.jsdoc.conf.json",
-        "build": "tsc",
-        "prepublish": "yarn build",
-        "postinstall": "yarn build"
+            "build": "rm -rf dist/ & tsc",
+    "install": "yarn build"
     },
     "repository": {
         "type": "git",
@@ -51,8 +51,7 @@
     "homepage": "https://github.com/meister03/discord-linked-roles#readme",
     "devDependencies": {
         "@types/node": "^18.7.18",
-        "@types/node-fetch": "^2.6.2",
-        "typescript": "^4.8.3"
+        "@types/node-fetch": "^2.6.2"
     },
     "resolutions": {
         "discord-api-types": "0.37.35"
